# PolyRAG

./: .dockerignore  .gitignore  API_GUIDE.md  BACKLOG.md  BUG_REPORT.txt  COMPETITIVE_ASSESSMENT.md  README.md  TODO.md  aws-deployment-plan.md  docker-compose.polyrag.yml  install.ps1  isv-licensing-plan.md  pyproject.toml  pytest.ini  requirements.txt  start.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api/: __init__.py  deps.py  jobs.py  main.py  schemas.py
api/routers/: backends.py  chunks.py  compare.py  config.py  evaluate.py  feedback.py  graph.py  ingest.py  jobs.py  prompts.py  purge.py  rag.py  retrieval_trails.py  search.py  system.py  traces.py
config/: config.yaml  prompts.yaml
core/: prompt_registry.py
core/chunking/: base.py  fixed_overlap.py  models.py  paragraph.py  pipeline.py  section_aware.py  semantic_boundary.py  sentence_boundary.py
core/confidence/: signals.py
core/embedding/: base.py  sentence_transformer.py
core/evaluation/: __init__.py  dataset_registry.py  ir_metrics.py  ragas_scorer.py
core/graph/: __init__.py  base.py  extractor.py  llm_extractor.py  models.py  registry.py  store_kuzu.py  store_neo4j.py  store_networkx.py  traversal.py
core/ingestion/: __init__.py  extractors.py  loader.py  (+1 more)
data/: graph.kuzu.wal
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
orchestrator/: pipeline.py  response.py
scripts/: compare_backends.py  load-test.ps1  refresh-context.ps1
tests/: conftest.py  test_backend_comparison.py  test_pipeline_e2e.py  test_search_e2e.py
(+120 files in other folders)
